--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "files": [
     "template",
     "template.json"
-  ]
+  ],
+  "dependencies": {
+    "kpmp-common-components": "^1.0.2"
+  }
 }
