--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "template.json"
   ],
   "dependencies": {
-    "kpmp-common-components": "^1.1.2"
+    "kpmp-common-components": "^1.1.2",
+    "kpmp-common-styles": "^1.0.2"
   }
 }
